Fix sizing and overflow of carousel

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ p {
 }
 
 main {
-  padding: 3rem;
   background-size: cover;
   background-image: url("./assets/pngtree-textured-abstract-beige-background-image_770439.jpg");
 }
