--- a/src/styles/brochurePage.module.scss
+++ b/src/styles/brochurePage.module.scss
@@ -5,10 +5,6 @@
   flex-direction: column;
 }
 
-.button {
-  display: flex;
-  gap: 5rem;
-}
 
 .content {
   display: flex;
