--- a/src/styles/picture.module.scss
+++ b/src/styles/picture.module.scss
@@ -2,9 +2,11 @@
   text-align: center;
 
   img {
-    height: auto;
+    width: 100%;
+    height: 300px;       
+    object-fit: cover; 
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    margin-bottom: 0.5rem;
-  }
+    margin-bottom: 0.5rem; 
+}
 }
